<resources>
    <string name="app_name">Communicator</string>
    <string name="facebook_app_id" translatable="false">1901170196809767</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1901170196809767</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_buy_me">Buy Me</string>
    <string name="title_spendings">Spendings</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="pref_currency_label">Currency</string>
    <string name="pref_currency_key" translatable="false">currency2</string>
    <string name="pref_currency_label_turkish_lira">Turkish_Lira</string>
    <string name="pref_currency_label_dollar">Dollar</string>
    <string name="pref_currency_label_pound">Pound</string>

    <string name="pref_time_period_key" translatable="false">time_period</string>
    <string name="pref_time_period_label">Time Period</string>
    <string name="pref_time_period_label_week">Last Week</string>
    <string name="pref_time_period_label_month">Last Month</string>
    <string name="pref_time_period_label_year">Last Year</string>
    <string name="pref_time_period_label_all">All</string>

    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_label">Language</string>
    <string name="pref_language_label_en">English</string>
    <string name="pref_language_label_tr">Turkish</string>

    <string name="confirm">Confirm</string>
    <string name="activity_add_spending_name">Name: </string>
    <string name="activity_add_spending_type">Type: </string>
    <string name="activity_add_spending_cost">Cost: </string>
    <string name="activity_add_spending_who_paid_it">Who Paid It: </string>

    <string name="activity_add_buy_me_name">Name: </string>
    <string name="activity_add_buy_me_description">Description: </string>

    <string name="activity_pay_from">From: </string>
    <string name="activity_pay_to">Who are paying to: </string>
    <string name="activity_pay_how_much">How Much: </string>

    <string name="activity_check_house_explanation">If you have an invitation code from a house please enter it.</string>
    <string name="activity_check_house_invitation_code">House Invitation Code</string>
    <string name="activity_check_house_or">Or add a new house</string>
    <string name="activity_check_house_add_a_new_house">Add a New House</string>

    <string name="buy_me_row_name">Name</string>
    <string name="buy_me_row_description">Description</string>
    <string name="buy_me_row_edit">Edit</string>
    <string name="buy_me_row_delete">Delete</string>

    <string name="fragment_buy_me_delete_all">Delete All</string>

    <string name="fragment_home_house_name">House Name</string>
    <string name="fragment_home_house_invite_member">Invite Member</string>
    <string name="fragment_home_house_pay">Pay</string>
    <string name="fragment_home_house_add_spending">Add Spending</string>
    <string name="fragment_home_invitation_text">Send the following code to the person you want to invite.</string>

    <string name="fragment_spendings_filter">Filter</string>

    <string name="spending_row_name">Name</string>
    <string name="spending_row_date">Date</string>
    <string name="spending_row_your_share">Your Share: </string>
    <string name="spending_row_edit">Edit</string>

    <string name="buy_me_added_notification_title">A buy me added!</string>
    <string name="buy_me_added_notification_body">Somebody in your house added a new buy me</string>

    <string name="spending_added_notification_title">A spending added!</string>
    <string name="spending_added_notification_body">Somebody in your house added a new spending</string>
    <string name="main_notification_channel_name">Primary</string>

</resources>
