<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/list_item_selector">

    <ImageView android:id="@+id/spending_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_account_box_black_24dp" />

    <TextView android:id="@+id/spending_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:text="@string/spending_row_name"
        android:textStyle="bold"
        android:layout_toRightOf="@id/spending_icon"/>

    <TextView android:id="@+id/spending_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spending_row_date"
        android:layout_toRightOf="@id/spending_name"
        android:layout_marginLeft="10dp"/>

    <TextView android:id="@+id/spending_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/spending_row_your_share"
        android:layout_below="@id/spending_name"
        android:layout_toRightOf="@id/spending_icon"/>

    <Button android:id="@+id/spending_delete"
        android:drawableLeft="@drawable/ic_delete_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_me_row_delete"
        android:textColor="@color/colorPrimary"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentRight="true"/>


</RelativeLayout>